--- a/fe/src/app/home/home.component.html
+++ b/fe/src/app/home/home.component.html
@@ -4,5 +4,11 @@
     <button class="nav-button" (click)="navigateToClani()">
       Upravljanje Članov
     </button>
+    <button class="nav-button" (click)="navigateToIgrisce()">
+      Igrišče & Rezervacije
+    </button>
+    <button class="nav-button secondary" (click)="navigateToLogin()">
+      Prijava
+    </button>
   </div>
 </div>
