--- a/fe/src/app/admin-home/admin-home.component.html
+++ b/fe/src/app/admin-home/admin-home.component.html
@@ -19,5 +19,14 @@
     <button class="nav-button" (click)="navigateToTurnirji()">
       🏆 Turnirji
     </button>
+    <button class="nav-button" (click)="navigateToZaposleni()">
+      🧑‍💼 Zaposleni
+    </button>
+    <button class="nav-button" (click)="navigateToUrnik()">
+      🗓️ Urnik
+    </button>
+    <button class="nav-button" (click)="navigateToShramba()">
+      📦 Shramba
+    </button>
   </div>
 </div>
