--- a/fe/src/app/home/home.component.html
+++ b/fe/src/app/home/home.component.html
@@ -16,5 +16,8 @@
     <button class="nav-button user-button" (click)="navigateToUserTurnirji()">
       🏆 Odprti Turnirji
     </button>
+    <button class="nav-button user-button" (click)="navigateToUserTrenerji()">
+      🧑‍🏫 Trenerji &  Termini
+    </button>
   </div>
 </div>
